--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
 
 website:
-  title: "zhenglei.github.io"
+  title: "Zhenglei Gao"
   navbar:
     left:
       - href: index.qmd
@@ -12,7 +12,9 @@ website:
 
 format:
   html:
-    theme: cosmo
+    theme:
+      light: minty
+      dark: solar
     css: styles.css
     toc: true
 
